cmake_minimum_required(VERSION 3.25)
project(Vector)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
find_package(GTest REQUIRED)
add_executable(ProjektasTest Tests/Tests.cpp)
target_link_libraries(ProjektasTest GTest::GTest GTest::Main)
add_executable(Vector ${SOURCES})
enable_testing()
add_test(NAME ProjektasTest COMMAND projektasTest)
